[package]
name = "sindri-resolver"
version = "0.1.0"
edition = "2021"

[lib]
name = "sindri_resolver"
path = "src/lib.rs"

[dependencies]
sindri-core = { path = "../sindri-core" }
sindri-registry = { path = "../sindri-registry" }
sindri-policy = { path = "../sindri-policy" }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tracing = { workspace = true }
dirs-next = { workspace = true }
