[package]
name = "sindri-targets"
version = "0.1.0"
edition = "2021"

[lib]
name = "sindri_targets"
path = "src/lib.rs"

[dependencies]
sindri-core = { path = "../sindri-core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dirs-next = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
