[package]
name = "sindri"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sindri"
path = "src/main.rs"

[dependencies]
sindri-core = { path = "../sindri-core" }
sindri-registry = { path = "../sindri-registry" }
sindri-resolver = { path = "../sindri-resolver" }
sindri-backends = { path = "../sindri-backends" }
sindri-targets = { path = "../sindri-targets" }
sindri-discovery = { path = "../sindri-discovery" }
sindri-extensions = { path = "../sindri-extensions" }
sindri-policy = { path = "../sindri-policy" }
clap = { workspace = true }
clap_complete = { workspace = true }
flate2 = { workspace = true }
chrono = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
dirs-next = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tar = { workspace = true }
base64 = { workspace = true }
reqwest = { workspace = true }
zstd = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
wiremock = "0.6"
tokio = { workspace = true }
